# machine_Learning_Algorithms_python

./: .gitignore  KNN.py  README.md  deepfeatures.ipynb  test.py
Data_Analytics/: Healthcare_analysis.ipynb  basic.ipynb  data_checking.ipynb  datemanupulation.py  info.md  versioning.py
Data_Analytics/.ipynb_checkpoints/: Healthcare_analysis-checkpoint.ipynb  info-checkpoint.md
Data_Analytics/DataViz/: datavisualization_basics.ipynb
Data_Analytics/SQL_LR/: intro.sql
Data_Analytics/credictcardAnalytics/: genPlotes.py  note.md
Data_Analytics/eda/: basic_time_series.ipynb  (+3 more)
EtE_projects/house-prices/src/: feature_eng.py  pyproject.toml  readme.md
EtE_projects/house-prices/src/config/: feat_pipe.yaml
EtE_projects/house-prices/src/utils/: data_loader.py  initializer.py
TestBench/: MLproject  mlflow_setup.ipynb  train.py
clustering/: FND04-NB01.ipynb  Kmeans.ipynb  clust_wiki_data.ipynb  locality_sensitive_hashing.ipynb
genAI/RAG/rag_app/: pyproject.toml
genAI/RAG/rag_app/rag_app/: basic.ipynb  olama_app.ipynb  olama_test.drawio
genAI/RAG/rag_app/rag_app/chroma/: chroma.sqlite3
logistic_regression/: classify.py  house_rate_prediction.ipynb  imp_classification_w2PA1.ipynb  product_sent_analyzing.ipynb  sentiment_prediction.ipynb
ml_camp/: Tensor.ipynb  c5Tuning_trees.ipynb  classifications.ipynb  decisionTree.ipynb  hier_clust.py  hier_clust_test.py  reg_imput_preproc.py  superwised_ML_eda.ipynb  unsuper.ipynb
pipe/: intro.ipynb
recom_system/: song_recom_system.ipynb
regression/: multiple_reg.ipynb  poly_reg_w3a1.ipynb  pred_house_price.ipynb
(+78 files in other folders)
