[tool.poetry]
name = "house-price-prediction"
version = "0.1.0"
description = "Regression model for house price prediction"
authors = ["Akhil Vinayak P <nirvanaosborn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
pandas = "^2.2.0"
numpy = "^1.26.3"
prefect = "^2.14.16"
invoke = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
