[tool.poetry]
name = "rag-app"
version = "0.1.0"
description = ""
authors = ["Akhil Vinayak P <nirvanaosborn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.11"
langchain-community = "^0.2.11"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.20"
langchainhub = "^0.1.20"
chromadb = "^0.5.5"
pypdf = "^4.3.1"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
